# AeroDev-GOD-mode-AI-orchestration

./: .env.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  arena-build-specification-v1 (1).md  claude-code-kickoff.md  requirements.txt
arena-section1-verified/: README.md  deliberation.py  state_machine.py  test_deliberation.py  test_state_machine.py
desktop/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tsconfig.json  vitest.config.ts
desktop/scripts/: gen-appicon.mjs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/app/: globals.css  layout.tsx  page.tsx
desktop/src/components/: ConnectionBadge.tsx  FeedPanel.tsx  GateCard.tsx  PhaseTimeline.tsx  ProjectScreen.tsx  ProjectView.tsx  StatusStrip.tsx  WindowFrame.tsx
desktop/src/hooks/: useProjectStream.ts
desktop/src/lib/: arenaClient.ts  config.ts  projectStore.ts  reconnect.ts  snapshot.ts  tauriWindows.ts  types.ts
desktop/tests/: ProjectView.test.tsx  projectStore.integ.test.ts  reconnect.test.ts  snapshot.test.ts
desktop/tests/helpers/: backend.ts
src/backend/: app.py  hub.py  orchestrator.py  schemas.py  secrets_api.py  secrets_store.py
src/orchestration/: phases.py
tests/: test_backend_stream.py  test_secrets.py
