[package]
name = "arena-desktop"
version = "0.1.0"
description = "Arena desktop shell — a live window onto the cloud orchestration backend"
authors = ["Arena"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "arena_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
